--- a/src/Layout/layout.css
+++ b/src/Layout/layout.css
@@ -14,6 +14,7 @@ body {
 .container {
   max-width: 75%;
   margin: auto;
+  flex-grow: 1;
 }
 .container-85 {
   max-width: 85%;
@@ -408,9 +409,7 @@ body::-webkit-scrollbar {
   display: flex;
   justify-content: space-between;
 }
-.modalWindows .modal-content .flex .modal-input {
-  width: 25%;
-}
+
 .modalWindows .modal-content .modal-input {
   margin: 10px 5px;
   /* width: 100%; */
